--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,4 @@
-/*
+/**
 	Project: Bar & Club Stats
 	Author: Dylan N. Gluck
 	Date: 07/02/2012
@@ -17,7 +17,7 @@
 /****** 01. Global + Helper Styles ******/
 
 body {
-	background-color: #FFF;
+	background-color: #F0F0ED;
 	padding-top: 0;
 	padding-bottom: 40px;
 }
@@ -36,23 +36,37 @@ body {
 /****** 02. Home Page Styles ******/
 
 #home-callout-wrap {
-	padding: 80px 0;
+	padding: 0;
 	background-color: #2c2c2c;
-	background-image: -moz-linear-gradient(top, #333333, #222222);
-	background-image: -ms-linear-gradient(top, #333333, #222222);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
-	background-image: -webkit-linear-gradient(top, #333333, #222222);
-	background-image: -o-linear-gradient(top, #333333, #222222);
-	background-image: linear-gradient(top, #333333, #222222);
-	background-repeat: repeat-x;
+	background-image: url('../img/bg.jpeg');
+	background-repeat: repeat;
 	background-size: cover;
+	background-position: center center;
 	position: relative;
 	bottom: 18px;
 	border-bottom: 3px solid #CCC;
 }
 
 #callout-text {
+	padding-top: 40px;
+}
+
+#callout-mobile {
+	padding: 30px 0;
+}
+
+#callout-mobile h1, #callout-text h1 {
+	font-size: 30px;
+	line-height: 40px;
+	margin-bottom: 20px;
 	color: #FFF;
+}
+
+#callout-mobile p, #callout-text p {
+	font-size: 16px;
+	line-height: 22px;
+	margin-bottom: 25px;
+	color: #CCC;
 }
 
 #video-home {
@@ -74,6 +88,11 @@ body {
 #as-seen-on img {
 	height: 75px;
 	margin-right: 30px;
+}
+
+#testimonials div em {
+	display: block;
+	margin-bottom: 10px;
 }
 
 /****** 03. Recent News Styles ******/
@@ -115,23 +134,26 @@ body {
 
 /****** XX. Media Queries ******/
 
-  /* Large desktop */
-  @media (min-width: 1200px) {
+	/* Landscape phones and down */
+	@media (max-width: 480px) {
 
-  }
+	}
 
-  /* Portrait tablet to landscape and desktop */
-  @media (min-width: 768px) and (max-width: 979px) {
+	/* Landscape phone to portrait tablet */
+	@media (max-width: 767px) {
 
-  }
+	}
 
-  /* Landscape phone to portrait tablet */
-  @media (max-width: 767px) {
+	/* Portrait tablet to landscape and desktop */
+	@media (min-width: 768px) and (max-width: 979px) {
 
-  }
+	}
 
-  /* Landscape phones and down */
-  @media (max-width: 480px) {
+	/* Large desktop */
+	@media (min-width: 1200px) {
+		#callout-text {
+			padding-top: 120px;
+		}
+	}
 
-  }
 
