Fix Navigation & Sizes

--- a/css/app.css
+++ b/css/app.css
@@ -90,6 +90,10 @@ body {
 	margin-right: 30px;
 }
 
+.features-well div h3 {
+	margin-bottom: 10px;
+}
+
 #testimonials div em {
 	display: block;
 	margin-bottom: 10px;
